SQuirreL SQL FX Change Log
==============================

Bug fix: Running SQL by clicking the tool bar button used to take the focus off the SQL editor.

Improvement: Double click selection in SQL editor now selects words correctly.

Bug fix: Abbreviations where triggered by any succeeding key not only by space.

Upgraded RichTextFX to version 0.6.10.

Bug fix: Corrected positioning of join generators in completion popup list.

Feature: Join generators: Using code completion (ctrl+space) on the following expressions will generate join clauses:
  - #i,table1,table2,...tableN, will generate inner join from table1 to table2 to ... tableN using constraints between the tables
  - #l,table1,table2,...tableN, will generate left join from table1 to table2 to ... tableN using constraints between the tables
  - #j,table1,table2,...tableN, will generate left/inner join from table1 to table2 to ... tableN using constraints between the tables
    and depending on the foreign keys' nullability

Bug fix: Code completion did not work inside column lists that were separated by commas but no white spaces.

Improved connect progress dialog to show progress information.

Bug fix: Code completion did'nt calculate the table/view closest to the caret right. That's why completion of unqualified columns was sometimes wrong.

More improved Object tree performance: Details tabs data are now loaded on demand.

Bug fix: Search in SQL result table didn't work when user had rearranged column orders.

Feature: New setting in settings dialog to limit number of SQL result tabs.

Bug fix: When selection inside a SQL result table is in progress and the mouse pointer is dragged right or left out of the table the table did not scroll.

Removed the maximum Java-VM memory parameter (-Xmx512m) from the Windows start batch. Java should be able to manage its memory itself.

Feature: Search in SQL result table.
