@@ -88,3 +88,5 @@ sqlresult.popup.ExportResults=Export Results
 no.object.found.in.object.tree=No object named "%s" found in object tree.
 
 no.string.at.caret=The caret is not positioned on a string.
+
+sqlresult.popup.delete.selected.rows=Delete selected rows
