@@ -1,5 +1,6 @@
 package org.squirrelsql.session.sql.makeeditable;
 
+import javafx.scene.control.MenuItem;
 import javafx.scene.control.TableView;
 import javafx.scene.control.ToggleButton;
 import javafx.scene.control.Tooltip;
@@ -8,16 +9,16 @@ import org.squirrelsql.globalicons.GlobalIconNames;
 import org.squirrelsql.services.I18n;
 import org.squirrelsql.session.Session;
 import org.squirrelsql.session.sql.SQLResult;
-import org.squirrelsql.table.tableedit.EdittableTableController;
-import org.squirrelsql.table.TableLoader;
+import org.squirrelsql.table.tableedit.EditableTableController;
 
 public class EditButtonCtrl
 {
    private final EditableSqlCheck _editableSqlCheck;
    private I18n _i18n = new I18n(getClass());
    private ToggleButton _btnEdit;
-   private EdittableTableController _edittableTableController;
+   private EditableTableController _editableTableController;
    private Session _session;
+   private MenuItem _mnuDeleteRows;
 
 
    public EditButtonCtrl(Session session, String sql)
@@ -36,7 +37,10 @@ public class EditButtonCtrl
 
    private void onEditableChanged()
    {
-      _edittableTableController.setEditable(_btnEdit.isSelected());
+      _editableTableController.setEditable(_btnEdit.isSelected());
+
+      _mnuDeleteRows.setDisable(!_btnEdit.isSelected());
+
    }
 
    public ToggleButton getEditButton()
@@ -51,6 +55,17 @@ public class EditButtonCtrl
 
    public void displayAndPrepareEditing(SQLResult sqlResult, TableView tv)
    {
-      _edittableTableController = new EdittableTableController(_session, sqlResult, tv, _editableSqlCheck.getTableNameFromSQL());
+      _editableTableController = new EditableTableController(_session, sqlResult, tv, _editableSqlCheck.getTableNameFromSQL());
+   }
+
+   public void deleteSelectedRows()
+   {
+      _editableTableController.deleteSelectedRows();
+   }
+
+   public void setDeleteRowsMenuItem(MenuItem mnuDeleteRows)
+   {
+      _mnuDeleteRows = mnuDeleteRows;
+      _mnuDeleteRows.setDisable(true);
    }
 }
