@@ -2,3 +2,7 @@ update.effects.more.rows=%d instead of one rows will be updated.\nDo you want to
 update.effects.no.rows=Update count was 0.\nNo rows updated.
 failed.to.update=Failed to interpret edited value:\n%s
 update.error=Error occurred during update:\n%s
+
+delete.error=Error occurred during delete:\n%s
+delete.effects.more.rows=%d instead of one rows will be deleted.\nDo you want to continue?
+delete.effects.no.rows=Update count was 0.\nNo rows deleted.
